// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input  should render an input 1`] = `
<input
  className="sc-bdVaJa jLXuqB"
/>
`;

exports[`Input  should support error 1`] = `
<input
  className="sc-bdVaJa dMakBu"
/>
`;
